Feat: Aula 3 changes

--- a/Aula2/MyFirstApp/src/app/home/home.page.html
+++ b/Aula2/MyFirstApp/src/app/home/home.page.html
@@ -1,39 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      My travel
+      Olá, {{ pessoa ? {{ texto }}essoa.nome + ' ' + pessoa.sobrenome : visitante }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   
-  <ion-text color="black">
-    <h1>Hello, user</h1>
-    <h1>Where do you want to go?</h1>
-  </ion-text>
-
-  <ion-item>
-    <ion-grid>
-      <ion-row>
-        <ion-col>
-          <ion-icon name="globe"></ion-icon>
-        </ion-col>
-        <ion-col>
-          <i-input placeholder="Search destination">Search destination</i-input>
-        </ion-col>
-        <ion-col>
-          <ion-button (click)="onClick()">
-            <ion-icon name="arrow-forward"></ion-icon>
-          </ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-item>
-
-  <ion-text color="black">
-    <h2>Daily Scenary</h2>
-    <span>Updated</span>
-  </ion-text>
-
+  <div class="container">
+    <ion-text color="primary">
+      <h1>{{ texto }}</h1>
+    </ion-text>
+  </div>
 </ion-content>
