Feat: create reset button

--- a/Aula2/MyFirstApp/src/app/home/home.page.html
+++ b/Aula2/MyFirstApp/src/app/home/home.page.html
@@ -46,6 +46,11 @@
         </ion-col>
       </ion-row>
     </ion-grid>
+
+    <ion-button color="dark" (click)="resetar()" expand="block" fill="solid" shape="round">
+      Resetar
+    </ion-button>
+
   </ion-card>
 
 </ion-content>
